<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="app1">Spotify Streamer</string>
    <string name="app2">Football Scores</string>
    <string name="app3">Library</string>
    <string name="app4">Build it Bigger</string>
    <string name="app5">XYZ Reader</string>
    <string name="app6">Capstone</string>


</resources>
