<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <Button
        android:id="@+id/app1"
        android:text="@string/app1"
        style="@style/buttons"/>

    <Button
        android:id="@+id/app2"
        style="@style/buttons"
        android:text="@string/app2"/>
    <Button
        android:id="@+id/app3"
        style="@style/buttons"
        android:text="@string/app3"/>
    <Button
        android:id="@+id/app4"
        style="@style/buttons"
        android:text="@string/app4"/>
    <Button
        android:id="@+id/app5"
        style="@style/buttons"
        android:text="@string/app5"/>
    <Button
        android:id="@+id/app6"
        style="@style/buttons"
        android:text="@string/app6"/>

</LinearLayout>
